# opam-nix

./: DOCUMENTATION.md  LICENSE  README.md  TODO.md  always-native.nix  bootstrapPackages.nix  builder.nix  default.nix  external-package-map.nix  flake.nix  global-variables.nix  initial-packages.nix  lib.nix  mccs.nix  native-package-map.nix  opam-evaluator.nix  opam.nix  opam2json.nix  overlay.nix  pkgdef2drv.nix  repl.nix
examples/: 0install.nix  default.nix  frama-c.nix  mina.nix  opam-ed.nix  opam-repository.json  opam2json-static.nix  opam2json.nix  tezos.nix
examples/0install/: flake.nix
examples/coq/: flake.nix
examples/docfile/: default.nix
examples/docfile/my-package/: hello.ml  my-package.opam
examples/down/: flake.nix
examples/frama-c/: flake.nix
examples/materialized-opam-ed/: flake.nix  package-defs.json
examples/ocaml-lsp/: flake.nix
examples/opam-ed/: flake.nix
examples/opam2json/: flake.nix
examples/opam2json-static/: flake.nix
examples/readme/: default.nix
examples/readme/my-package/: my-package.opam  package-defs.json  test.sh
examples/rocq/: flake.nix
examples/tezos/: flake.nix
overlays/: ocaml-darwin.nix  ocaml-static.nix  ocaml.nix
package-maps/: always-native.nix
patches/: lndir-level.patch  ocamlfind_1_9_4_install_topfind.patch  ocamlfind_install_topfind.patch  opam.patch
patches/ocamlfind/: install_topfind_192.patch  install_topfind_194.patch  (+3 more)
scripts/: .opam-nix-gen.in.swp  opam-nix-gen.in  opam-nix-regen.in
src/: builder.nix  global-variables.nix  lib.nix  opam-evaluator.nix  opam.nix
(+17 files in other folders)
